--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -1,4 +1,5 @@
-[
+[   
+
     {
         "id": 1,
         "name": "My First Website",
@@ -16,5 +17,13 @@
         "name": "Mobile UX",
         "image": "https://images.unsplash.com/photo-1534237886190-ced735ca4b73?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80",
         "description": "I like to design for the mobile platform. The challenges to build UI's for smartphones is challenging but extremely rewarding."
+    },
+    {
+        
+        "id": 4,
+        "name": "My First Website",
+        "image": "http://www.4president.us/websites/2000/2000w/gore2000home.gif",
+        "description": "This was my first project. The guy lost, but won the popular vote!"
+
     }
 ]
